--- a/public/tree2.html
+++ b/public/tree2.html
@@ -28,6 +28,12 @@
         let draggingIcon = null;
         let copiedIcon = null;
 
+        //newly added global variables
+        let fadingIcon = null; // 存储渐隐的图标信息
+        let fadingOpacity = 1; // 用于控制图标的透明度      
+        let fadingTimer = null; // 存储逐渐消失的计时器
+
+
         function loadImage(src) {
             return new Promise((resolve, reject) => {
                 const img = new Image();
@@ -145,6 +151,11 @@
                 copiedIcon.isDragging = false; // 停止拖拽状态
                 icons.push({ ...copiedIcon }); // 添加图标到画布
                 copiedIcon = null; // 清除复制的图标
+
+                //newly add properties
+                fadingIcon = newFadingIcon;
+                fadingOpacity = 1;
+                fadingTimer = setInterval(fadeOutIcon, 1000 / 60); // 60帧每秒
             }
         }
 
@@ -183,6 +194,30 @@
                 menu.remove();
             });
         }
+
+
+        //newly added function
+function fadeOutIcon() {
+    fadingOpacity -= 0.02; // 每帧透明度减小
+    if (fadingOpacity <= 0) {
+        clearInterval(fadingTimer); // 清除计时器
+        fadingIcon = null; // 清除渐隐的图标
+        fadingOpacity = 1; // 重置透明度
+
+        // 替换为本地的 GIF 动图
+        const gifImage = new Image();
+        gifImage.src = 'path_to_your_local_gif.gif'; // 请替换为实际的 GIF 路径
+        fadingIcon = { img: gifImage, x: fadingIcon.x, y: fadingIcon.y, width: fadingIcon.width, height: fadingIcon.height };
+        
+        setTimeout(() => {
+            fadingIcon = null; // 清除 GIF 图标
+        }, 5000); // 5秒后清除 GIF 图标
+    } else {
+        fadingIcon.img.style.opacity = fadingOpacity; // 设置图标透明度
+    }
+}
+
+
 
  function sendToBackend(jsonData) {
     fetch('http://localhost:63342/record-click', { // 后端的完整地址
